--- a/styles/dosinfo.css
+++ b/styles/dosinfo.css
@@ -8,6 +8,7 @@
   width: 100%;
   text-align: center;
   background: black;
+  z-index: 99;
 }
 
 #header > h1 {
@@ -15,6 +16,21 @@
   font-family: Georgia, Times, "Times New Roman", serif;
   color: white;
   margin: 0;
+}
+
+.wrapper {
+  width: 600px;
+  position: relative;
+  margin: 0 auto;
+}
+
+#maincontent {
+  position: relative;
+  width: 550px;
+  background: green;
+  padding: 30px 30px 50px 30px;
+  margin: 0 auto;
+  margin-top: 100px;
 }
 
 #footer {
