--- a/styles/dosinfo.css
+++ b/styles/dosinfo.css
@@ -7,8 +7,27 @@
   color: white;
 }
 
+#maincontent {
+  background: green;
+}
+
+.section {
+  background: yellow;
+}
+
 #leftsidebar, #rightsidebar {
   background: blue;
+}
+
+/* Fonts */
+#header h1 {
+  font-size: 50px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+}
+
+.section {
+  font-size: 16px;
+  font-family: "Arial Narrow", Arial, sans-serif;
 }
 
 /* Actual styling */
@@ -20,14 +39,12 @@
   left: 0;
   right: 0;
   width: 100%;
-  height: 75px;
+  height: 80px;
   text-align: center;
   z-index: 99;
 }
 
 #header h1 {
-  font-size: 50px;
-  font-family: Georgia, Times, "Times New Roman", serif;
   margin: 0;
 }
 
@@ -59,10 +76,14 @@
 #maincontent {
   position: relative;
   width: 550px;
-  padding: 20px 0;
   margin: 0 auto;
   margin-top: 100px;
-  background: green;
+}
+
+.section {
+  margin: 0px 4px;
+  padding: 0 5px;
+  text-align: justify;
 }
 
 #footer {
