--- a/styles/dosinfo.css
+++ b/styles/dosinfo.css
@@ -30,6 +30,11 @@
   font-family: "Arial Narrow", Arial, sans-serif;
 }
 
+#footer p {
+  font-size: 12px;
+  font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
+}
+
 /* Actual styling */
 #header {
   padding: 10px 0;
@@ -87,13 +92,11 @@
 }
 
 #footer {
+  position: relative;
+  width: 550px;
+  margin: 0 auto;
+  margin-top: -16px;
   padding: 10px 0;
-  position: fixed;
-  margin: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
   text-align: center;
 }
 
@@ -103,8 +106,6 @@
 }
 
 #footer p {
-  font-size: 12px;
-  font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
   margin: 0;
   position: relative;
   float: left;
