--- a/styles/dosinfo.css
+++ b/styles/dosinfo.css
@@ -1,6 +1,7 @@
 /* Colors */
 body {
-  background: red;
+  background: #1C1C1C;
+  background-image:url('background.jpg');
 }
 
 #header, #footer {
@@ -16,11 +17,12 @@ body {
 }
 
 .section {
-  background: yellow;
+  background: #999999;
 }
 
 #leftsidebar, #rightsidebar {
-  background: blue;
+  background: #2C2C2C;
+  color: white;
 }
 
 /* Fonts */
@@ -86,10 +88,11 @@ body {
 }
 
 #maincontent {
-  position: relative;
-  width: 550px;
-  margin: 0 auto;
-  margin-top: 100px;
+	position: relative;
+	width: 550px;
+	margin: 0 auto;
+	margin-top: 100px;
+	background-color: #333333;
 }
 
 .section {
