--- a/styles/dosinfo.css
+++ b/styles/dosinfo.css
@@ -106,6 +106,10 @@ body {
   text-align: justify;
 }
 
+.section h1 {
+  text-align: center;
+}
+
 #footer {
   position: relative;
   width: 550px;
