--- a/styles/dosinfo.css
+++ b/styles/dosinfo.css
@@ -30,6 +30,10 @@ body {
   color: #2C2C2C;
 }
 
+.sidebarbutton:active {
+  background: white;
+}
+
 /* Fonts */
 #header h1 {
   font-size: 50px;
@@ -39,6 +43,10 @@ body {
 .section {
   font-size: 16px;
   font-family: "Arial Narrow", Arial, sans-serif;
+}
+
+.section h1 {
+  font-size: 24px;
 }
 
 #footer p {
@@ -90,6 +98,7 @@ body {
 
 .sidebarbutton {
   line-height: 30px;
+  cursor: pointer;
 }
 
 #maincontent {
