--- a/styles/dosinfo.css
+++ b/styles/dosinfo.css
@@ -1,6 +1,6 @@
 /* Colors */
 body {
-  background: #1C1C1C;
+  background: #ffffff;
   background-image:url('background.jpg');
 }
 
@@ -13,7 +13,7 @@ body {
 }
 
 #maincontent {
-  background: green;
+  'background: green;
 }
 
 .section {
@@ -21,13 +21,13 @@ body {
 }
 
 #leftsidebar, #rightsidebar {
-  background: #2C2C2C;
-  color: white;
+  'background: #2C2C2C;
+  'color: white;
 }
 
 .sidebarbutton:hover {
-  background: cyan;
-  color: #2C2C2C;
+  'background: cyan;
+  'color: #2C2C2C;
 }
 
 .sidebarbutton:active {
@@ -79,7 +79,7 @@ body {
 }
 
 #leftsidebar, #rightsidebar {
-  width: 150px;
+  width: 180px;
   position: fixed;
   top: 100px;
   line-height: 16px;
@@ -106,7 +106,7 @@ body {
 	width: 550px;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: #333333;
+	'background-color: #333333;
 }
 
 .section {
