--- a/styles/dosinfo.css
+++ b/styles/dosinfo.css
@@ -13,7 +13,7 @@ body {
 }
 
 #maincontent {
-  'background: green;
+  /*background: green;*/
 }
 
 .section {
@@ -21,13 +21,13 @@ body {
 }
 
 #leftsidebar, #rightsidebar {
-  'background: #2C2C2C;
-  'color: white;
+  /*background: #2C2C2C;*/
+  /*color: white;*/
 }
 
 .sidebarbutton:hover {
-  'background: cyan;
-  'color: #2C2C2C;
+  /*background: cyan;*/
+  /*color: #2C2C2C;*/
 }
 
 .sidebarbutton:active {
@@ -106,7 +106,7 @@ body {
 	width: 550px;
 	margin: 0 auto;
 	margin-top: 100px;
-	'background-color: #333333;
+	/*background-color: #333333;*/
 }
 
 .section {
