--- a/styles/dosinfo.css
+++ b/styles/dosinfo.css
@@ -14,10 +14,11 @@ body {
 
 #maincontent {
   /*background: green;*/
+  background-image:url('gfxAssets/contentbg.png');
 }
 
 .section {
-  background: #999999;
+  /*background: #999999;*/
 }
 
 #leftsidebar, #rightsidebar {
@@ -103,7 +104,7 @@ body {
 
 #maincontent {
 	position: relative;
-	width: 550px;
+	width: 580px;
 	margin: 0 auto;
 	margin-top: 100px;
 	/*background-color: #333333;*/
