--- a/styles/dosinfo_horrible.css
+++ b/styles/dosinfo_horrible.css
@@ -8,7 +8,7 @@ body {
   background: yellow;
 }
 
-#header h1, #footer p {
+#footer p {
   color: green;
 }
 
@@ -25,14 +25,18 @@ body {
   color: yellow;
 }
 
+.sidebarbutton:hover {
+  background: white;
+  color: black;
+}
+
+.sidebarbutton:active {
+  background: pink;
+}
+
 /* Fonts */
 #leftsidebar, #rightsidebar {
   font-family: "Comic Sans MS", cursive, sans-serif;
-}
-
-#header h1 {
-  font-size: 50px;
-  font-family: "Comic Sans MS", Georgia, Times, "Times New Roman", serif;
 }
 
 .section {
@@ -59,10 +63,6 @@ body {
   z-index: 99;
 }
 
-#header h1 {
-  margin: 0;
-}
-
 .wrapper {
   width: 600px;
   position: relative;
@@ -70,7 +70,7 @@ body {
 }
 
 #leftsidebar, #rightsidebar {
-  width: 150px;
+  width: 180px;
   position: fixed;
   top: 100px;
   line-height: 16px;
@@ -79,12 +79,12 @@ body {
 
 #leftsidebar {
   left: 50%;
-  margin-left: -425px;
+  margin-left: -455px;
 }
 
 #rightsidebar {
   right: 50%;
-  margin-right: -425px;
+  margin-right: -455px;
 }
 
 .sidebarbutton {
@@ -98,7 +98,6 @@ body {
 	width: 550px;
 	margin: 0 auto;
 	margin-top: 100px;
-	background-color: #333333;
 }
 
 .section {
